# angular_app/api/api/default.service.ts
@@ -118,13 +118,14 @@ export class DefaultService {
      * @param minOccLength Filter results for minimum length
      * @param maxTargetWindow Filter results for a maximum sorted distance between highlighted notes
      * @param transposition An enum: what type of transpositions of the query will be returned
+     * @param corpus Select a corpus to search through
      * @param observe set whether or not to return the data Observable as the body, response or events. defaults to returning the body.
      * @param reportProgress flag to report request and response progress.
      */
-    public search(encoding?: string, query?: string, minOccLength?: number, maxTargetWindow?: number, transposition?: number, observe?: 'body', reportProgress?: boolean): Observable<Array<Occurrence>>;
-    public search(encoding?: string, query?: string, minOccLength?: number, maxTargetWindow?: number, transposition?: number, observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<Array<Occurrence>>>;
-    public search(encoding?: string, query?: string, minOccLength?: number, maxTargetWindow?: number, transposition?: number, observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<Array<Occurrence>>>;
-    public search(encoding?: string, query?: string, minOccLength?: number, maxTargetWindow?: number, transposition?: number, observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
+    public search(encoding?: string, query?: string, minOccLength?: number, maxTargetWindow?: number, transposition?: number, corpus?: string, observe?: 'body', reportProgress?: boolean): Observable<Array<Occurrence>>;
+    public search(encoding?: string, query?: string, minOccLength?: number, maxTargetWindow?: number, transposition?: number, corpus?: string, observe?: 'response', reportProgress?: boolean): Observable<HttpResponse<Array<Occurrence>>>;
+    public search(encoding?: string, query?: string, minOccLength?: number, maxTargetWindow?: number, transposition?: number, corpus?: string, observe?: 'events', reportProgress?: boolean): Observable<HttpEvent<Array<Occurrence>>>;
+    public search(encoding?: string, query?: string, minOccLength?: number, maxTargetWindow?: number, transposition?: number, corpus?: string, observe: any = 'body', reportProgress: boolean = false ): Observable<any> {
 
         let queryParameters = new HttpParams({encoder: new CustomHttpUrlEncodingCodec()});
         if (encoding !== undefined && encoding !== null) {
@@ -141,6 +142,9 @@ export class DefaultService {
         }
         if (transposition !== undefined && transposition !== null) {
             queryParameters = queryParameters.set('transposition', <any>transposition);
+        }
+        if (corpus !== undefined && corpus !== null) {
+            queryParameters = queryParameters.set('corpus', <any>corpus);
         }
 
         let headers = this.defaultHeaders;
